--- a/webapp-storefront/src/components/supplier/Supplier.css
+++ b/webapp-storefront/src/components/supplier/Supplier.css
@@ -85,7 +85,9 @@
    background-color: var(--background-white);
    padding: 20px;
    margin: 20px auto;
-   transition: transform 0.3s ease, box-shadow 0.3s ease;
+   transition:
+      transform 0.3s ease,
+      box-shadow 0.3s ease;
 }
 
 .rating-details-card:hover {
